--- a/src/components/Form/UserForm.css
+++ b/src/components/Form/UserForm.css
@@ -2,19 +2,46 @@ label {
   margin-right: 50px;
 }
 
+.form-container {
+  margin: 20px;
+  padding: 10px;
+  margin-top: 65px;
+  -webkit-box-shadow: 5px 6px 14px 4px rgba(0, 0, 0, 0.43);
+  box-shadow: 5px 6px 14px 4px rgba(0, 0, 0, 0.43);
+  border-radius: 10px;
+}
+
+.form-header {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-.name {
-  margin-bottom: 20px;
+.name,
+.email,
+.username,
+.city {
+  margin-bottom: 10px;
+}
+
+label {
+  display: inline-block;
+  width: 180px;
 }
 
 .btn-container {
-  margin-top: 20px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+  align-items: center;
 }
+
 .btn-container button {
-  margin-left: 10px;
+  margin-right: 10px;
 }
