--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
-h1 {
-  font-family: "Ubuntu", sans-serif;
-}
-
 .home {
   display: flex;
   flex-direction: column;
-  align-items: center;
+
   height: 100vh;
+}
+
+.home h1 {
+  margin-left: 20px;
+  font-family: "Ubuntu", sans-serif;
 }
